qtvideonode-plugin (0.1.3) UNRELEASED; urgency=low

  * Spliting up code in separate files
  * Add a unit test

 -- Guenter Schwann <guenter.schwann@canonical.com>  Fri, 09 Nov 2012 10:42:06 +0100

qtvideonode-plugin (0.1.2) quantal; urgency=low

  * new release 

 -- Bill Filler <bill.filler@canonical.com>  Mon, 05 Nov 2012 15:45:32 -0500

qtvideonode-plugin (0.1.1) quantal; urgency=low

  * Minor shader polishing
  * Fix shader to fix preview artifacts

 -- Guenter Schwann <guenter.schwann@canonical.com>  Tue, 30 Oct 2012 15:18:40 +0100

qtvideonode-plugin (0.1) UNRELEASED; urgency=low

  * Initial release.

 -- Guenter Schwann <guenter.schwann@canonical.com>  Wed, 24 Oct 2012 17:12:25 +0100
