@@ -2,6 +2,7 @@ qtvideonode-plugin (0.1.3) UNRELEASED; urgency=low
 
   * Spliting up code in separate files
   * Add a unit test
+  * Update camera control with every frame
 
  -- Guenter Schwann <guenter.schwann@canonical.com>  Fri, 09 Nov 2012 10:42:06 +0100
 
